# breadsimd

./: .clippy.toml  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml
src/: lib.rs  optimized.rs  stable.rs
src/optimized/: arm.rs  mod.rs  x86.rs
tests/: test_operations.rs
